# RustGame

./: Cargo.toml  conf.toml  todos.md
crates/client/: cargo.toml  conf.toml
crates/client/src/: add_input.rs  add_netcode_network.rs  main.rs
crates/client/src/components/: input_context.rs  mod.rs
crates/client/src/resources/: input_contexts.rs  mod.rs
crates/client/src/systems/: client_setup.rs  connection_system.rs  input_system.rs  mod.rs  send_message_system.rs  update_visualizer_system.rs
crates/server/: cargo.toml
crates/server/src/: main.rs
crates/server/src/systems/: handle_events_system.rs  mod.rs  receive_message_system.rs  send_message_system.rs  server_setup.rs
crates/shared/: Cargo.toml
crates/shared/src/: game_events.rs  lib.rs
src/: arg_parser.rs  events.rs  main.rs
src/components/: input_context.rs
src/resources/: packets.rs
src/systems/: client_setup.rs  client_system.rs  input_system.rs  mod.rs  server_system.rs
