[workspace]
members = ["crates/client", "crates/server", "crates/shared"]

[workspace.dependencies]
bevy = { version = "0.12.0", features = ["dynamic_linking"] }
bevy_renet = "0.0.10"
rust-ini = "0.20.0"
toml = "0.8.8"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
