[workspace]
members = ["crates/client", "crates/server", "crates/shared"]
resolver = "1"

[workspace.dependencies]
bevy_renet = { version = "0.0.10", features = ["serde"] }
rust-ini = "0.20.0"
toml = "0.8.8"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
